[project]
name = "aioamqp-stubs"
version = "0.1.0"
description = "Stubs for aioamqp"
authors = [
    {name = "guitvcer",email = "abdrakhman.galaxy.s2@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aioamqp (>=0.15.0,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "aioamqp-stubs"}
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pytest = "^8.3.5"
ruff = "^0.9.9"
pre-commit = "^4.1.0"
pytest-mypy-plugins = "^3.2.0"
